Training CTC (work needed), updating evaluator

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluating OCR Models"
+    "# Evaluating OCR Models\n",
+    "### TODO - Finish abstract class of cycler"
    ]
   },
   {
@@ -32,6 +33,7 @@
     "import math\n",
     "from collections import Counter\n",
     "import unidecode\n",
+    "from abc import ABC, abstractmethod\n",
     "\n",
     "# Import Widgets\n",
     "from ipywidgets import Button, Text, HBox, VBox\n",
@@ -42,7 +44,7 @@
     "from ocr.normalization import letterNorm, imageNorm\n",
     "# from ocr import charSeg\n",
     "# Helpers\n",
-    "from ocr.helpers import implt, resize\n",
+    "from ocr.helpers import implt, resize, extendImg\n",
     "from ocr.datahelpers import loadWordsData, idx2char\n",
     "from ocr.tfhelpers import Graph\n",
     "from ocr.viz import printProgressBar"
@@ -202,28 +204,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cycler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class WordCycler:\n",
-    "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
-    "    def __init__(self, images, labels, charClass, slider=(60, 15), ctc=False):\n",
+    "class Cycler(ABC):\n",
+    "    \"\"\" Abstract cycler class \"\"\" \n",
+    "    def __init__(self,\n",
+    "                 images,\n",
+    "                 labels,\n",
+    "                 charClass,\n",
+    "                 stats=\"NO Stats Provided\",\n",
+    "                 slider=(60, 15),\n",
+    "                 ctc=False,\n",
+    "                 charRNN=False):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
     "        self.charClass = charClass\n",
     "        self.slider = slider\n",
     "        self.totalChars = sum([len(l) for l in labels])\n",
     "        self.ctc = ctc\n",
+    "        self.charRNN = charRNN\n",
+    "        self.stats = stats\n",
     "        \n",
     "        self.evaluate()\n",
     "        \n",
+    "    @abstractmethod\n",
+    "    def recogniseWord(self, img):\n",
+    "        pass\n",
+    "    \n",
+    "    def countCorrect(self, pred, label, lower=False):\n",
+    "        correct = 0\n",
+    "        for i in range(min(len(pred), len(label))):\n",
+    "            if ((not lower and pred[i] == label[i])\n",
+    "                 or (lower and pred[i] == label.lower()[i])):\n",
+    "                correct += 1\n",
+    "                \n",
+    "        return correct        \n",
+    "\n",
+    "    \n",
+    "    def evaluate(self):\n",
+    "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
+    "        print()\n",
+    "        print(\"STATS:\", self.stats)\n",
+    "        print(self.labels[1], ':', self.recogniseWord(self.images[1]))\n",
+    "        start_time = time.time()\n",
+    "        correct = 0\n",
+    "        correctWithCorrection = 0\n",
+    "        for i in range(len(self.images)):\n",
+    "            word = self.recogniseWord(self.images[i])\n",
+    "            correct += self.countCorrect(word,\n",
+    "                                         self.labels[i])\n",
+    "            # Correction works only for lower letters\n",
+    "            correctWithCorrection += self.countCorrect(correction(word.lower()),\n",
+    "                                                       self.labels[i],\n",
+    "                                                       lower=True)\n",
+    "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
+    "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
+    "        print(\"Accuracy with correction: %s %%\" % round(correctWithCorrection/self.totalChars * 100, 4))\n",
+    "        print(\"--- %s seconds ---\" % round(time.time() - start_time, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WordCycler(Cycler):\n",
+    "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
     "    def recogniseWord(self, img):\n",
     "        slider = self.slider\n",
     "        \n",
     "        if self.ctc:\n",
     "            slider_step = 2\n",
+    "            img = extendImg(\n",
+    "                img,\n",
+    "                (img.shape[0], max(-(-img.shape[1] // slider_step) * slider_step, self.slider[1]+slider_step)))\n",
     "            length = (img.shape[1]-slider[1]) // slider_step\n",
     "            input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
     "            input_seq[0][:] = [img[:, loc*slider_step: loc*slider_step + slider[1]].flatten()\n",
@@ -239,7 +304,7 @@
     "                if word == 0 and i != 0:\n",
     "                    break\n",
     "                else:\n",
-    "                    word += idx2char(i+2, True)\n",
+    "                    word += idx2char(i)\n",
     "            \n",
     "        else:\n",
     "            length = img.shape[1]//slider[1]\n",
@@ -270,65 +335,23 @@
     "                else:\n",
     "                    word += idx2char(i, True)\n",
     "\n",
-    "        return word\n",
-    "    \n",
-    "    \n",
-    "    def countCorrect(self, pred, label, lower=False):\n",
-    "        correct = 0\n",
-    "        for i in range(min(len(pred), len(label))):\n",
-    "            if ((not lower and pred[i] == label[i])\n",
-    "                 or (lower and pred[i] == label.lower()[i])):\n",
-    "                correct += 1\n",
-    "                \n",
-    "        return correct        \n",
-    "\n",
-    "    \n",
-    "    def evaluate(self):\n",
-    "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
-    "        print()\n",
-    "        print(\"STATS: Seq2Seq\")\n",
-    "        print(self.labels[1], ':', self.recogniseWord(self.images[1]))\n",
-    "        start_time = time.time()\n",
-    "        correct = 0\n",
-    "        correctWithCorrection = 0\n",
-    "        for i in range(len(self.images)):\n",
-    "            word = self.recogniseWord(self.images[i])\n",
-    "            correct += self.countCorrect(word,\n",
-    "                                         self.labels[i])\n",
-    "            # Correction works only for lower letters\n",
-    "            correctWithCorrection += self.countCorrect(correction(word.lower()),\n",
-    "                                                       self.labels[i],\n",
-    "                                                       lower=True)\n",
-    "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
-    "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
-    "        print(\"Accuracy with correction: %s %%\" % round(correctWithCorrection/self.totalChars * 100, 4))\n",
-    "        print(\"--- %s seconds ---\" % round(time.time() - start_time, 2))"
+    "        return word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Cycler:\n",
+    "class CharCycler(Cycler):\n",
     "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
-    "    def __init__(self, images, labels, charClass, charRNN=False):\n",
-    "        self.images = images\n",
-    "        self.labels = labels\n",
-    "        self.charClass = charClass\n",
-    "        self.charRNN = charRNN\n",
-    "        \n",
-    "        self.totalChars = sum([len(l) for l in labels])\n",
-    "        \n",
-    "        self.evaluateAll()\n",
-    "        \n",
-    "    def recogniseWord(self, img, gapRNN=False):\n",
+    "    def recogniseWord(self, img):\n",
     "        img = cv2.copyMakeBorder(img,\n",
     "                                 0, 0, 30, 30,\n",
     "                                 cv2.BORDER_CONSTANT,\n",
     "                                 value=[0, 0, 0])\n",
-    "        gaps = charSeg.segmentation(img, RNN=gapRNN)\n",
+    "        gaps = charSeg.segmentation(img, RNN=True)\n",
     "        \n",
     "        chars = []\n",
     "        for i in range(len(gaps)-1):\n",
@@ -352,50 +375,12 @@
     "            for c in pred:\n",
     "                # word += CHARS[charIdx]\n",
     "                word += idx2char(c)        \n",
-    "        return word\n",
-    "    \n",
-    "    \n",
-    "    def countCorrect(self, pred, label, lower=False):\n",
-    "        correct = 0\n",
-    "        for i in range(min(len(pred), len(label))):\n",
-    "            if ((not lower and pred[i] == label[i])\n",
-    "                 or (lower and pred[i] == label.lower()[i])):\n",
-    "                correct += 1\n",
-    "                \n",
-    "        return correct            \n",
-    "        \n",
-    "\n",
-    "    def evaluateAll(self):\n",
-    "        self.evaluate(True)\n",
-    "#         self.evaluate(False)\n",
-    "        \n",
-    "\n",
-    "    def evaluate(self, gapRNN):\n",
-    "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
-    "        print()\n",
-    "        print(\"STATS: gapRNN - %s, charRNN - %s\" % (gapRNN, self.charRNN))\n",
-    "        print(self.labels[1], ':', self.recogniseWord(self.images[1], gapRNN))\n",
-    "        start_time = time.time()\n",
-    "        correct = 0\n",
-    "        correctWithCorrection = 0\n",
-    "        for i in range(len(self.images)):\n",
-    "            word = self.recogniseWord(self.images[i], gapRNN)\n",
-    "            correct += self.countCorrect(word,\n",
-    "                                         self.labels[i])\n",
-    "            # Correction works only for lower letters\n",
-    "            correctWithCorrection += self.countCorrect(correction(word.lower()),\n",
-    "                                                       self.labels[i],\n",
-    "                                                       lower=True)\n",
-    "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
-    "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
-    "        print(\"Accuracy with correction: %s %%\" %\n",
-    "              round(correctWithCorrection/self.totalChars * 100, 4))\n",
-    "        print(\"--- %s seconds ---\" % round(time.time() - start_time, 2))"
+    "        return word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,37 +393,37 @@
       "Correct/Total: 454 / 1356\n",
       "Accuracy: 33.4808 %\n",
       "Accuracy with correction: 32.4484 %\n",
-      "--- 11.85 seconds ---\n",
+      "--- 13.47 seconds ---\n",
       "\n",
-      "STATS: Seq2Seq\n",
+      "STATS: Seq2Seq2CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 997 / 1356\n",
       "Accuracy: 73.5251 %\n",
       "Accuracy with correction: 76.1799 %\n",
-      "--- 35.12 seconds ---\n",
+      "--- 40.63 seconds ---\n",
       "\n",
-      "STATS: Seq2Seq\n",
-      "spreads : spread\n",
-      "Correct/Total: 933 / 1356\n",
-      "Accuracy: 68.8053 %\n",
-      "Accuracy with correction: 76.0324 %\n",
-      "--- 39.27 seconds ---\n",
+      "STATS: CTC\n",
+      "spreads : spreade\n",
+      "Correct/Total: 896 / 1356\n",
+      "Accuracy: 66.0767 %\n",
+      "Accuracy with correction: 69.6903 %\n",
+      "--- 42.85 seconds ---\n",
       "\n",
-      "STATS: gapRNN - True, charRNN - False\n",
+      "STATS: Bi-RNN and CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 57.07 seconds ---\n"
+      "--- 69.32 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7f312a0932e8>"
+       "<__main__.CharCycler at 0x7f1ddfa3be48>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,23 +433,27 @@
     "\n",
     "WordCycler(images,\n",
     "           labels,\n",
-    "           wordClass)\n",
+    "           wordClass,\n",
+    "           stats='Seq2Seq')\n",
     "\n",
     "WordCycler(images,\n",
     "           labels,\n",
     "           wordClass2,\n",
-    "           (60, 2))\n",
+    "           stats='Seq2Seq2CNN',\n",
+    "           slider=(60, 2))\n",
     "\n",
     "WordCycler(images,\n",
     "           labels,\n",
     "           wordClass3,\n",
-    "           (60, 30),\n",
-    "           True)\n",
+    "           stats='CTC',\n",
+    "           slider=(60, 40),\n",
+    "           ctc=True)\n",
     "\n",
-    "Cycler(images,\n",
-    "       labels,\n",
-    "       charClass_1,\n",
-    "       charRNN=False)\n",
+    "CharCycler(images,\n",
+    "           labels,\n",
+    "           charClass_1,\n",
+    "           stats='Bi-RNN and CNN',\n",
+    "           charRNN=False)\n",
     "\n",
     "# Cycler(images,\n",
     "#        labels,\n",
