Training Seq2Seq with 2px slider -> no big difference

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from models/char-clas/en/CharClassifier\n",
-      "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier\n",
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier2\n",
       "INFO:tensorflow:Restoring parameters from models/word-clas/en/SeqRNN/Classifier\n",
       "INFO:tensorflow:Restoring parameters from models/word-clas/en/CTC/Classifier\n"
      ]
@@ -95,7 +95,7 @@
     "# charClass_2 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_2', 'prediction')\n",
     "# charClass_3 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_1', 'prediction')\n",
     "\n",
-    "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier', 'prediction_infer')\n",
+    "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier2', 'prediction_infer')\n",
     "wordClass2 = Graph('models/word-clas/' + LANG + '/SeqRNN/Classifier', 'word_prediction')\n",
     "wordClass3 = Graph('models/word-clas/' + LANG + '/CTC/Classifier', 'word_prediction')"
    ]
@@ -225,6 +225,7 @@
     "                 stats=\"NO Stats Provided\",\n",
     "                 slider=(60, 15),\n",
     "                 ctc=False,\n",
+    "                 seq2seq=False,\n",
     "                 charRNN=False):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
@@ -232,6 +233,7 @@
     "        self.slider = slider\n",
     "        self.totalChars = sum([len(l) for l in labels])\n",
     "        self.ctc = ctc\n",
+    "        self.seq2seq = seq2seq\n",
     "        self.charRNN = charRNN\n",
     "        self.stats = stats\n",
     "        \n",
@@ -315,7 +317,7 @@
     "            input_seq = input_seq.swapaxes(0, 1)\n",
     "\n",
     "\n",
-    "            if slider[1] == 15:\n",
+    "            if self.seq2seq:\n",
     "                targets = np.zeros((1, 1), dtype=np.int32)  \n",
     "                pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
     "                                                 'encoder_inputs_length:0': [length],\n",
@@ -389,38 +391,38 @@
      "text": [
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : represe\n",
-      "Correct/Total: 454 / 1356\n",
-      "Accuracy: 33.4808 %\n",
-      "Accuracy with correction: 32.4484 %\n",
-      "--- 13.47 seconds ---\n",
+      "spreads : zpasobe\n",
+      "Correct/Total: 626 / 1356\n",
+      "Accuracy: 46.1652 %\n",
+      "Accuracy with correction: 45.8702 %\n",
+      "--- 24.48 seconds ---\n",
       "\n",
       "STATS: Seq2Seq2CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 997 / 1356\n",
       "Accuracy: 73.5251 %\n",
       "Accuracy with correction: 76.1799 %\n",
-      "--- 40.63 seconds ---\n",
+      "--- 36.8 seconds ---\n",
       "\n",
       "STATS: CTC\n",
       "spreads : spreade\n",
       "Correct/Total: 896 / 1356\n",
       "Accuracy: 66.0767 %\n",
       "Accuracy with correction: 69.6903 %\n",
-      "--- 42.85 seconds ---\n",
+      "--- 42.36 seconds ---\n",
       "\n",
       "STATS: Bi-RNN and CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 69.32 seconds ---\n"
+      "--- 64.81 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.CharCycler at 0x7f1ddfa3be48>"
+       "<__main__.CharCycler at 0x7fb70aa00f60>"
       ]
      },
      "execution_count": 9,
@@ -434,7 +436,9 @@
     "WordCycler(images,\n",
     "           labels,\n",
     "           wordClass,\n",
-    "           stats='Seq2Seq')\n",
+    "           stats='Seq2Seq',\n",
+    "           slider=(60, 2),\n",
+    "           seq2seq=True)\n",
     "\n",
     "WordCycler(images,\n",
     "           labels,\n",
