Training CTC - improvement

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -86,7 +86,7 @@
       "INFO:tensorflow:Restoring parameters from models/char-clas/en/CharClassifier\n",
       "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier2\n",
       "INFO:tensorflow:Restoring parameters from models/word-clas/en/SeqRNN/Classifier\n",
-      "INFO:tensorflow:Restoring parameters from models/word-clas/en/CTC/Classifier\n"
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/CTC/Classifier2\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
     "\n",
     "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier2', 'prediction_infer')\n",
     "wordClass2 = Graph('models/word-clas/' + LANG + '/SeqRNN/Classifier', 'word_prediction')\n",
-    "wordClass3 = Graph('models/word-clas/' + LANG + '/CTC/Classifier', 'word_prediction')"
+    "wordClass3 = Graph('models/word-clas/' + LANG + '/CTC/Classifier2', 'word_prediction')"
    ]
   },
   {
@@ -287,13 +287,18 @@
     "        slider = self.slider\n",
     "        \n",
     "        if self.ctc:\n",
-    "            slider_step = 2\n",
+    "            step = 10\n",
+    "            img = cv2.copyMakeBorder(\n",
+    "                img,\n",
+    "                0, 0, self.slider[1]//2, self.slider[1]//2,\n",
+    "                cv2.BORDER_CONSTANT,\n",
+    "                value=[0, 0, 0])\n",
     "            img = extendImg(\n",
     "                img,\n",
-    "                (img.shape[0], max(-(-img.shape[1] // slider_step) * slider_step, self.slider[1]+slider_step)))\n",
-    "            length = (img.shape[1]-slider[1]) // slider_step\n",
+    "                (img.shape[0], max(-(-img.shape[1] // step) * step, self.slider[1] + step)))\n",
+    "            length = (img.shape[1]-slider[1]) // step\n",
     "            input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
-    "            input_seq[0][:] = [img[:, loc*slider_step: loc*slider_step + slider[1]].flatten()\n",
+    "            input_seq[0][:] = [img[:, loc*step: loc*step + slider[1]].flatten()\n",
     "                             for loc in range(length)]\n",
     "            input_seq = input_seq.swapaxes(0, 1)\n",
     "            \n",
@@ -395,34 +400,34 @@
       "Correct/Total: 626 / 1356\n",
       "Accuracy: 46.1652 %\n",
       "Accuracy with correction: 45.8702 %\n",
-      "--- 24.48 seconds ---\n",
+      "--- 23.43 seconds ---\n",
       "\n",
       "STATS: Seq2Seq2CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 997 / 1356\n",
       "Accuracy: 73.5251 %\n",
       "Accuracy with correction: 76.1799 %\n",
-      "--- 36.8 seconds ---\n",
+      "--- 32.94 seconds ---\n",
       "\n",
       "STATS: CTC\n",
-      "spreads : spreade\n",
-      "Correct/Total: 896 / 1356\n",
-      "Accuracy: 66.0767 %\n",
-      "Accuracy with correction: 69.6903 %\n",
-      "--- 42.36 seconds ---\n",
+      "spreads : spreads\n",
+      "Correct/Total: 1003 / 1356\n",
+      "Accuracy: 73.9676 %\n",
+      "Accuracy with correction: 78.0973 %\n",
+      "--- 28.3 seconds ---\n",
       "\n",
       "STATS: Bi-RNN and CNN\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 64.81 seconds ---\n"
+      "--- 57.29 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.CharCycler at 0x7fb70aa00f60>"
+       "<__main__.CharCycler at 0x7fe7db39f2e8>"
       ]
      },
      "execution_count": 9,
@@ -450,7 +455,7 @@
     "           labels,\n",
     "           wordClass3,\n",
     "           stats='CTC',\n",
-    "           slider=(60, 40),\n",
+    "           slider=(60, 60),\n",
     "           ctc=True)\n",
     "\n",
     "CharCycler(images,\n",
